--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -30,4 +30,5 @@
 @import "utilities/modifiers/mod-margin";
 @import "utilities/modifiers/mod-padding";
 @import "utilities/modifiers/mod-layout";
+@import "utilities/modifiers/mod-backgrounds";
 @import "utilities/modifiers/mod-flexbox";
