--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -23,3 +23,14 @@ $bg-color: #e1e0e0;
 
 $inverse-bg-color: mix(black, $brand-primary, 25%);
 $inverse-text-color: white;
+
+
+@mixin theme-black {
+  background-color: #111;
+  color: #fff;
+  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+}
+
+.theme-black {
+  @include theme-black;
+}
