--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #333;
+  background-color: #f9f9f9;
   height: 100vh;
 }
 
@@ -23,7 +23,4 @@ body {
   align-items: center;
   justify-content: center;
   flex-grow: 1;
-  max-width: 50rem;
-  margin-right: auto;
-  margin-left: auto;
 }
