--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,6 +16,7 @@
 // Components
 @import "components/navigation/navigation";
 @import "components/masthead";
+@import "components/cards";
 
 // Modules
 @import "modules/site-header";
