--- a/scss/utilities/mixins/_backgrounds.scss
+++ b/scss/utilities/mixins/_backgrounds.scss
@@ -20,4 +20,12 @@
   > .container {
     @include mw-40em;
   }
+  font-size: 1.25rem;
+  .h1, h1 {
+    font-size: 2.5em;
+  }
+  p {
+    font-size: 1.125em;
+    @include mb-2;
+  }
 }
