--- a/css/modifiers.css
+++ b/css/modifiers.css
@@ -95,11 +95,21 @@
   .caret:before {
     display: none; }
 
-.mod-block {
-  padding-top: 4em;
-  padding-right: 2em;
-  padding-bottom: 4em;
-  padding-left: 2em; }
+.pad-block {
+  padding: 4em; }
+  .pad-block > .container {
+    padding: 0; }
+
+.banner {
+  padding: 0; }
+  .banner > .container {
+    padding: 4em; }
+
+.banner-full {
+  padding: 0; }
+  .banner-full > .container {
+    padding: 0;
+    max-width: 100%; }
 
 .circle-mask {
   border-radius: 100%;
