--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -1,13 +1,13 @@
 body {
   background-color: #f9f9f9;
-  height: 100vh;
+  //height: 100vh;
 }
 
 .site-wrapper {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  //height: 100vh;
   //box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
 }
 
@@ -19,8 +19,19 @@ body {
 // main
 
 #main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
+  @include flex;
+  @include flex-d-col;
+  @include flex-grow-1;
+  > * {
+    //@include flex-grow-1;
+    
+    @include w-100;
+    & + *:not(.banner) {
+      //@include pt-2;
+      //@include pb-2;
+      @include pad-block;
+    }
+  }
+  
+
 }
