hero image optimization

--- a/css/styles.css
+++ b/css/styles.css
@@ -1052,7 +1052,7 @@ body {
     font-size: 1.125em;
     margin-bottom: 2rem; }
   .bg-hero-globe {
-    background-image: url(../images/bg/bg-hero-globe-dark.png); }
+    background-image: url(../images/bg/bg-hero-globe-dark.jpg); }
 
 .flex-layout {
   display: flex;
