--- a/scss/utilities/modifiers/_mod-backgrounds.scss
+++ b/scss/utilities/modifiers/_mod-backgrounds.scss
@@ -11,7 +11,7 @@
 .bg-hero {
   @include bg-hero;
   &-globe {
-    background-image: url(../images/bg/bg-hero-globe-dark.png);
+    background-image: url(../images/bg/bg-hero-globe-dark.jpg);
   }
 }
 
