--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -14,12 +14,18 @@
     }
     @media (min-width: $break-ml-phone) {
       @include flex-d-row;
+      @include ai-center;
+      > img {
+        @include as-center;
+        @include w-35;
+      }
       .card-block {
         @include flex;
         @include flex-d-col;
+        padding: 10%;
       }
       .card-text {
-        @include flex-grow-1;
+        margin-bottom: 20%;
       }
       .btn {
         @include as-start;
