--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,7 +10,7 @@
 // Elements
 @import "elements/icons";
 @import "elements/buttons";
-@import "elements/tabs";
+//@import "elements/tabs";
 @import "elements/media-wrap";
 
 // Components
@@ -21,7 +21,7 @@
 // Modules
 @import "modules/site-header";
 @import "modules/footer";
-@import "modules/features";
+//@import "modules/features";
 
 // Templates
 // @import "templates/dashboard";
