--- a/css/styles.css
+++ b/css/styles.css
@@ -356,23 +356,19 @@ img {
 
 .btn-outline {
   background-color: transparent;
-  border: 1px solid currentColor;
+  border: 2px solid currentColor;
   text-align: center; }
+  .btn-outline:hover, .btn-outline:focus {
+    background-color: #39909A;
+    border-color: transparent;
+    color: rgba(255, 255, 255, 0.8);
+    text-shadow: none; }
 
 .btn-round {
   border-radius: 5rem; }
 
 .btn-text {
   padding: 0; }
-
-.tab-content {
-  background-color: initial;
-  border: initial;
-  color: initial; }
-
-.tab.btn-brand.active {
-  background-color: #277adc;
-  border-color: #277adc; }
 
 .media-wrap {
   position: relative;
@@ -384,10 +380,10 @@ img {
   .media-wrap > div,
   .media-wrap > iframe {
     display: inline-block;
-    position: absolute !important;
+    position: absolute;
     margin: 0;
-    padding-top: 0 !important;
-    height: 100% !important;
+    padding-top: 0;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0; }
@@ -551,20 +547,6 @@ img {
   @media (min-width: 30em) {
     .footer-copyright .soc-media-icons {
       justify-content: flex-end; } }
-
-.features .icon-box-icon {
-  font-size: 1rem;
-  margin-bottom: .75rem; }
-
-.features [class^="icon-"]:before, .features [class*=" icon-"]:before {
-  font-size: 6rem; }
-
-.icon-box-title h3 {
-  font-size: 1.5em;
-  font-weight: normal; }
-
-.icon-box-link {
-  color: #00A2E1; }
 
 @media (min-width: 33.75em) {
   .align-right {
