--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -1,7 +1,14 @@
 .btn-outline {
   background-color: transparent;
-  border: 1px solid currentColor;
+  border: 2px solid currentColor;
   text-align: center;
+  &:hover,
+  &:focus {
+    background-color: $brand-primary;
+    border-color: transparent;
+    color: rgba(#fff, .8);
+    text-shadow: none;
+  }
 }
 
 .btn-round {
