--- a/scss/elements/_media-wrap.scss
+++ b/scss/elements/_media-wrap.scss
@@ -9,10 +9,10 @@
 	& > div,
 	& > iframe {
 		display: inline-block;
-		position: absolute !important;
+		position: absolute;
 		margin: 0;
-    padding-top: 0 !important;
-		height: 100% !important;
+    padding-top: 0;
+		height: 100%;
 		width: 100%;
 		top:0;
 		left:0;
