--- a/scss/elements/_icons.scss
+++ b/scss/elements/_icons.scss
@@ -6,8 +6,8 @@
   vertical-align: middle;
   position: relative;
   top: -.0625em;
-  margin-right: 0.25em;
-  margin-left: 0.25em;   
+  margin-right: .25em;
+  margin-left: .25em;   
   text-align: center; 
   transition: fill .3s ease;
 }
