--- a/css/modifiers.css
+++ b/css/modifiers.css
@@ -1,4 +1,21 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400|Varela+Round");
+@font-face {
+  font-family: "Montserrat Light";
+  src: url("../fonts/montserrat-300.woff2") format("woff2"), url("../fonts/montserrat-300.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/montserrat-500.woff2") format("woff2"), url("../fonts/montserrat-500.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Montserrat Bold";
+  src: url("../fonts/montserrat-700.woff2") format("woff2"), url("../fonts/montserrat-700.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
 .max-black-c {
   color: #111; }
 
@@ -195,13 +212,13 @@
   font-size: 1em; }
 
 .text-md {
-  font-size: 1.35em; }
+  font-size: 1.25em; }
 
 .text-lg {
   font-size: 1.5em; }
 
 .text-xl {
-  font-size: 1.875em; }
+  font-size: 2.5em; }
 
 .all-caps {
   text-transform: uppercase; }
@@ -400,6 +417,9 @@
 .h-100 {
   height: 100%; }
 
+.h-100vh {
+  height: 100vh; }
+
 .w-a {
   width: auto; }
 
@@ -516,6 +536,9 @@
 
 .mw-56em {
   max-width: 56.25em; }
+
+.mw-100p {
+  max-width: 100%; }
 
 @media (min-width: 33.75em) {
   .align-right {
