--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,21 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400|Varela+Round");
+@font-face {
+  font-family: "Montserrat Light";
+  src: url("../fonts/montserrat-300.woff2") format("woff2"), url("../fonts/montserrat-300.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/montserrat-500.woff2") format("woff2"), url("../fonts/montserrat-500.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Montserrat Bold";
+  src: url("../fonts/montserrat-700.woff2") format("woff2"), url("../fonts/montserrat-700.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
 .max-black-c {
   color: #111; }
 
@@ -178,7 +195,7 @@
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5); }
 
 .sans-serif {
-  font-family: "Helvetica Neue", Helvetica, sans-serif; }
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
 
 .serif {
   font-family: "Garamond", "Cambria", Georgia, serif; }
@@ -186,7 +203,6 @@
 body {
   color: #333;
   line-height: 1.667;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
   font-size-adjust: none;
   text-rendering: optimizeLegibility; }
 
@@ -197,20 +213,19 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
   color: currentColor;
-  font-family: "Varela Round", "Helvetica Neue", Helvetica, sans-serif;
-  font-weight: normal;
   line-height: 1.35;
   transition: opacity .2s; }
+  .fonts-loaded h1, .fonts-loaded .h1, .fonts-loaded
+  h2, .fonts-loaded .h2, .fonts-loaded
+  h3, .fonts-loaded .h3, .fonts-loaded
+  h4, .fonts-loaded .h4, .fonts-loaded
+  h5, .fonts-loaded .h5, .fonts-loaded
+  h6, .fonts-loaded .h6 {
+    font-family: "Montserrat", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-weight: 500; }
 
 .h1, h1 {
-  margin-top: 0;
   margin-bottom: 1.5rem; }
-
-h2, h3, h4, h5, h6,
-.h2, .h3, .h4, .h5, .h6,
-.help-block, p {
-  margin-top: 0;
-  margin-bottom: 1rem; }
 
 a {
   color: currentColor;
@@ -224,37 +239,13 @@ p {
   p a {
     text-decoration: none; }
 
+.fonts-loaded .lead {
+  font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-weight: 300; }
+
 a abbr[title] {
   border: none;
   text-decoration: inherit; }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-nav,
-p ul,
-p ol {
-  margin-bottom: 1rem; }
-
-@media (min-width: 11.25em) {
-  .fonts-loaded h1:not(.site-title),
-  .fonts-loaded .h1:not(.site-title) {
-    font-size: 3.5rem; }
-  .fonts-loaded h2, .fonts-loaded .h2 {
-    font-size: 2.75rem; }
-  .fonts-loaded h3, .fonts-loaded .h3 {
-    font-size: 2.125rem; }
-  .fonts-loaded h4, .fonts-loaded .h4 {
-    font-size: 1.875rem; }
-  .fonts-loaded h5, .fonts-loaded .h5,
-  .fonts-loaded .small-header {
-    font-size: 1.65rem; }
-  .fonts-loaded h6, .fonts-loaded .h6 {
-    font-size: 1.25rem; } }
 
 .module-header.full-height {
   display: flex;
@@ -293,7 +284,7 @@ p ol {
 .disclaimer {
   color: hotpink;
   font-size: 1rem;
-  font-family: "Helvetica Neue", Helvetica, sans-serif; }
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
 
 body {
   background-color: #f9f9f9; }
@@ -316,9 +307,9 @@ img {
   flex-grow: 1; }
   #main > * {
     width: 100%; }
-    #main > * + *:not(.banner) {
+    #main > * + *:not(.banner-full) {
       padding: 4em; }
-      #main > * + *:not(.banner) > .container {
+      #main > * + *:not(.banner-full) > .container {
         padding: 0; }
 
 .icon {
@@ -329,8 +320,8 @@ img {
   vertical-align: middle;
   position: relative;
   top: -.0625em;
-  margin-right: 0.25em;
-  margin-left: 0.25em;
+  margin-right: .25em;
+  margin-left: .25em;
   text-align: center;
   transition: fill .3s ease; }
 
@@ -354,10 +345,17 @@ img {
 .rotate-neg-45 {
   transform: rotate(-45deg); }
 
+.fonts-loaded .btn {
+  font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-weight: 300; }
+
 .btn-outline {
   background-color: transparent;
   border: 2px solid currentColor;
+  letter-spacing: .05em;
   text-align: center; }
+  .btn-outline .icon-outline {
+    margin-right: .625rem; }
   .btn-outline:hover, .btn-outline:focus {
     background-color: #39909A;
     border-color: transparent;
@@ -459,12 +457,9 @@ img {
   white-space: initial; }
 
 .masthead {
-  text-align: center;
   height: 100vh;
-  width: 100%; }
-
-.masthead-brand {
-  margin-bottom: 0; }
+  width: 100%;
+  text-align: center; }
 
 .card-clean {
   background-color: transparent;
@@ -571,13 +566,13 @@ img {
   font-size: 1em; }
 
 .text-md {
-  font-size: 1.35em; }
+  font-size: 1.25em; }
 
 .text-lg {
   font-size: 1.5em; }
 
 .text-xl {
-  font-size: 1.875em; }
+  font-size: 2.5em; }
 
 .all-caps {
   text-transform: uppercase; }
@@ -904,6 +899,9 @@ img {
 .h-100 {
   height: 100%; }
 
+.h-100vh {
+  height: 100vh; }
+
 .w-a {
   width: auto; }
 
@@ -1021,6 +1019,9 @@ img {
 .mw-56em {
   max-width: 56.25em; }
 
+.mw-100p {
+  max-width: 100%; }
+
 @media (min-width: 33.75em) {
   .align-right {
     text-align: right; }
@@ -1056,14 +1057,20 @@ img {
   align-items: center;
   align-self: stretch;
   flex-grow: 1;
-  font-size: 1.25rem; }
-  .bg-hero > .container {
-    max-width: 40em; }
+  font-size: calc( 1rem + (40 - 28) * ( (100vw - 400px) / ( 2000 - 400))); }
   .bg-hero .h1, .bg-hero h1 {
-    font-size: 2.5em; }
+    font-size: 2.5em;
+    margin-bottom: .625rem; }
   .bg-hero p {
-    font-size: 1.125em;
-    margin-bottom: 2rem; }
+    max-width: 40em;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 2rem;
+    font-size: 1.25em; }
+  .bg-hero .btn {
+    font-size: .875em; }
+  .bg-hero .icon {
+    font-size: 1em; }
   .bg-hero-globe {
     background-image: url(../images/bg/bg-hero-globe-dark.jpg); }
 
