--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -8,22 +8,13 @@
 	font-family: $serif;
 }
 
-@mixin Varela {
-	font-family: $Varela;
-}
-
-@mixin OpenSans {
-	font-family: $OpenSans;
-}
-
 @mixin font-scale {
-  font-size: calc( 1rem + (40 - 20) * ( (100vw - 400px) / ( 2000 - 400)));
+  font-size: calc( 1rem + (40 - 28) * ( (100vw - 400px) / ( 2000 - 400)));
 }
 
 body {
 	color: #333;
 	line-height: 1.667;
-	@include OpenSans;
 	font-size-adjust: none;
 	text-rendering: optimizeLegibility; 		
 }
@@ -35,23 +26,20 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
   color: currentColor;
-	@include Varela; 	
-  font-weight: normal;
-	line-height: 1.35;
+  @include Montserrat;
+  line-height: 1.35;
   transition: opacity .2s;	
 }
 
 
 .h1, h1 {
-  @include mt-0;
   @include mb-1-pt5;
 }
 
 h2, h3, h4, h5, h6,
 .h2, .h3, .h4, .h5, .h6,
 .help-block, p {
-  @include mt-0;
-  @include mb-1;
+  
 }
 
 a {
@@ -61,18 +49,22 @@ a {
   //-webkit-font-smoothing: subpixel-antialiased;
 }
 
-p {	
-  //color: #555;
-	font-size: 1.1em;
+p {
+  font-size: 1.1em;
   line-height: 1.75;
-	-webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   a {
     //color: $link;
-		text-decoration: none;	
-	}
-	a {
+    text-decoration: none;
+  }
+  a {
     //@include link-shadow;
-	}
+  }
+}
+
+
+.lead {
+  @include MontserratLight;
 }
 
 a abbr[title] {
@@ -80,56 +72,39 @@ a abbr[title] {
   text-decoration: inherit;  
 }
 
-a .icon {
-	//fill: $link;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-nav,
-p ul,
-p ol {
-  margin-bottom: 1rem;
-}
-
 // > 180
-@media (min-width: 11.25em) {
-  .fonts-loaded {
-    h1:not(.site-title),
-		.h1:not(.site-title) {
-    	font-size: 3.5rem;	
-    }
+// @media (min-width: 11.25em) {
+//   .fonts-loaded {
+//     h1:not(.site-title),
+// 		.h1:not(.site-title) {
+//     	font-size: 3.5rem;	
+//     }
     
-    h2, .h2 {
-    	font-size: 2.75rem;
-    }
+//     h2, .h2 {
+//     	font-size: 2.75rem;
+//     }
     
-    h3, .h3 {
-    	font-size: 2.125rem;
-    }
+//     h3, .h3 {
+//     	font-size: 2.125rem;
+//     }
     
-    h4, .h4 {
-    	font-size: 1.875rem;
-    }
+//     h4, .h4 {
+//     	font-size: 1.875rem;
+//     }
     
-    h5, .h5,
-		.small-header {
-    	font-size: 1.65rem;
-    }
+//     h5, .h5,
+// 		.small-header {
+//     	font-size: 1.65rem;
+//     }
     
-    h6, .h6 {
-    	font-size: 1.25rem;
-    }
-    p {
-      //font-size: 1.125rem; 
-    }
-  }
-}
+//     h6, .h6 {
+//     	font-size: 1.25rem;
+//     }
+//     p {
+//       //font-size: 1.125rem; 
+//     }
+//   }
+// }
 
 .module-header {
   &.full-height {
