--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -1,7 +1,18 @@
+.btn {
+  @include MontserratLight;
+}
+
+
 .btn-outline {
   background-color: transparent;
   border: 2px solid currentColor;
+  letter-spacing: .05em;
   text-align: center;
+
+  .icon-outline {
+    @include mr-sm;
+  }
+
   &:hover,
   &:focus {
     background-color: $brand-primary;
