--- a/scss/utilities/modifiers/_mod-backgrounds.scss
+++ b/scss/utilities/modifiers/_mod-backgrounds.scss
@@ -10,8 +10,19 @@
 
 .bg-hero {
   @include bg-hero;
+  
+  // blue globe
   &-globe {
     background-image: url(../images/bg/bg-hero-globe-dark.jpg);
+    background-image: -webkit-image-set(url(../images/bg/bg-hero-globe-dark.jpg) 1x,
+               url(../images/bg/bg-hero-globe-dark-lg.jpg) 2x);
+    background-image: -moz-image-set(url(../images/bg/bg-hero-globe-dark.jpg) 1x,
+            url(../images/bg/bg-hero-globe-dark-lg.jpg) 2x);
+    background-image: -o-image-set(url(../images/bg/bg-hero-globe-dark.jpg) 1x,
+            url(../images/bg/bg-hero-globe-dark-lg.jpg) 2x);
+    background-image: -ms-image-set(url(../images/bg/bg-hero-globe-dark.jpg) 1x,
+            url(../images/bg/bg-hero-globe-dark-lg.jpg) 2x);
   }
+
 }
 
