--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -87,7 +87,8 @@
 }
 
 @mixin MontserratLight {
-  -webkit-font-smoothing: initial;
+  -webkit-font-smoothing: auto;
+  font-family: $sans-serif;
   .fonts-loaded & {
     font-family: $MontserratLight;
     font-weight: 300;
@@ -95,6 +96,7 @@
 }
 
 @mixin Montserrat {
+  font-family: $sans-serif;
   .fonts-loaded & {
     font-family: $Montserrat;
     font-weight: 500;
@@ -102,6 +104,7 @@
 }
 
 @mixin MontserratBold {
+  font-family: $sans-serif;
   .fonts-loaded & {
     font-family: $MontserratBold;
     font-weight: 700;
