--- a/scss/utilities/mixins/_padding.scss
+++ b/scss/utilities/mixins/_padding.scss
@@ -88,6 +88,11 @@
   padding-bottom: 4em;   
 }
 
+@mixin pt-pb-5 {
+  padding-top: 5em;
+  padding-bottom: 5em;   
+}
+
 // Padding Top
 
 @mixin pt-0 {
@@ -118,6 +123,9 @@
   padding-top: 4em;  
 }
 
+@mixin pt-5 {
+  padding-top: 5em;  
+}
 
 // Padding Bottom
 
@@ -147,6 +155,10 @@
 
 @mixin pb-4 {
   padding-bottom: 4em;  
+}
+
+@mixin pb-5 {
+  padding-bottom: 5em;  
 }
 
 
