--- a/scss/modules/_site-header.scss
+++ b/scss/modules/_site-header.scss
@@ -1,19 +1,22 @@
 // Site Header
 
 .site-header {
+  background-color: rgba(#000, .85);
   &.headroom--not-top {
     background-color: rgba(black, .85);
   }
 }
 
 .headroom {
-  will-change: transform;
-  transition: transform .3s ease;
+  //will-change: transform;
+  transition: opacity .3s ease;
 }
 .headroom--pinned {
-  transform: translateY(0%);
+  //transform: translateY(0%);
+  opacity: 1;
 }
 
 .headroom--unpinned {
-  transform: translateY(-100%);
+  //transform: translateY(-100%);
+  opacity: 0;
 }
